Change index page view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sx-12">
+      <h1>Welcome to polymorphic microblog</h1>
+    </div>
+  </div>
+</div>
