--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sx-12">
+    <div class="col-md-12">
       <h1>Welcome to polymorphic microblog</h1>
     </div>
   </div>
