--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,13 +17,13 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <% @posts.each do |post| %>
+<% @posts.each do |post| %>
+  <div class="container padding-top-10px">
     <div class="row">
       <div class="post_body">
         <small><i>Data: <%= post.created_at.strftime('%v %T') %></i></small><br>
         <%= post.body %>
       </div>
     </div>
-  <% end %>
-</div>
+  </div>
+<% end %>
