Add display comments for post

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,5 @@
 
 .post_body{padding: 10px 20px; border-left: 2px solid;}
 .padding-top-10px{padding-top: 10px;}
+.padding-bottom-10{padding-bottom: 10px;}
+.comment_body{padding-left: 10px;}
