--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,6 +30,12 @@
           <b>Comment:</b> <%= comment.body %></i></small></p>
         <% end %>
       </div>
+      <div class="cooments_form">
+        <%= form_for :comment, url: post_comments_path(post) do |f|	%>
+          <%= f.text_area :body %>
+          <%= f.submit %>
+        <% end %>
+      </div>
     </div>
   </div>
 <% end %>
