--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,6 @@
 @import "bootstrap";
 
 .post_body{padding: 10px 20px; border-left: 2px solid;}
-.padding-top-10px{padding-top: 10px;}
-.padding-bottom-10{padding-bottom: 10px;}
+.padding-top-20{padding-top: 20px;}
+.padding-bottom-post{padding-bottom: 20px;}
 .comment_body{padding-left: 10px;}
