Create display Comment to comment. Fractal.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,4 +2,6 @@
 <div class="comment_body">
     <p><small><i><b>Data:</b> <%= comment.created_at.strftime('%v %T') %><br>
     <b>Comment:</b> <%= comment.body %></i></small></p>
+
+    <%= render :partial => 'comments/comment', :collection => comment.comments %>
 </div>
