Add create form for comments for comment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,4 +5,6 @@
 .post_body{padding: 10px 20px; border-left: 2px solid;}
 .margin-top-20{margin-top: 20px;}
 .padding-bottom-post{padding-bottom: 20px;}
-.comment_body{padding-left: 20px;}
+.padding-left-20, .comment_body{padding-left: 20px;}
+.inline{display: inline-block;}
+.inline-field{width: 200px;}
